# IIND-Production-Line

./: .gitignore  CMakeLists.txt  Codesys.Device.Application.6ea55284-0e68-4ee7-b2ea-52cd36d29f8a.bootinfo_guids  Codesys.Device.Application.xml  Codesys.project  Codesys.~u  MES-OPC-UA_PublishSubscribe.cpp  MES_ERP.py  OPC-UA_PublishSubscribe.py  checkpoint.project  open62541.h
Orders/: order_p3.json
Scada/Bitmaps/: 1.emf
Scada/Code/: my_code_file.wll
Scada/Config/: Table.ml
Scada/Gates/: D_Gates.bak  D_Gates.dbf  Gates.chk  N_Gates.dbf  N_Gates.dbfS_Gates.dbfD_Gates.dbfEvents.dbfZone.Identifier
Scada/Template/: main_screen
